terminado pour de bon

--- a/rapport/CompteRendu.tex
+++ b/rapport/CompteRendu.tex
@@ -793,10 +793,10 @@ Certifie qu'il s'agit d'un travail original et que toutes les sources utilis\'{e
 \newline
 Conform\'{e}ment \`{a} la loi, le non-respect de ces dispositions me rend passible de poursuites devant la commission disciplinaire et les tribunaux de la R\'{e}publique Fran\c{c}aise.
 \vspace*{20mm}
-\begin{center}
+\begin{flushright}
 Fait \`{a}  Nancy , le 13/05/2019
-\end{center}
-\vspace*{15mm}
+\end{flushright}
+\vspace*{5mm}
 \begin{flushright}
  Signature :  \,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,
 \end{flushright}
@@ -832,17 +832,29 @@ Certifie qu'il s'agit d'un travail original et que toutes les sources utilis\'{e
 \newline
 Conform\'{e}ment \`{a} la loi, le non-respect de ces dispositions me rend passible de poursuites devant la commission disciplinaire et les tribunaux de la R\'{e}publique Fran\c{c}aise.
 \vspace*{20mm}
-\begin{center}
+\begin{flushright}
 Fait \`{a}  Nancy , le 13/05/2019
-\end{center}
-\vspace*{15mm}
+\end{flushright}
+\vspace*{5mm}
 \begin{flushright}
  Signature :  \,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,
 \end{flushright}
 
 
+\cleardoublepage
+\newpage
+\strut
+\thispagestyle{empty}
+\newpage
 
-
+%====== resume ======
+\begin{center}
+{\bfseries \huge R\'{e}sum\'{e}}
+\end{center}
+\vspace*{35mm}
+Depuis quelques ann\'{e}es, un nouveau syst\`{e}me de raisonnement a vu le jour : le raisonnement \`{a} partir de cas. Ce type de raisonnement r\'{e}sout des probl\`{e}mes en retrouvant des cas analogues dans sa base de connaissances et en les adaptant au cas consid\'{e}r\'{e}. Ce syst\`{e}me a donc vu le jour gr\^{a}ce \`{a} l'\'{e}norme masse de donn\'{e}es que nous pouvons trouver sur l'Internet. Gr\^{a}ce \`{a} celui-ci, nous pouvons donc cr\'{e}er une alternative aux r\'{e}solutions de probl\`{e}mes : solutionner des probl\`{e}mes qui n'avaient jamais \'{e}t\'{e} r\'{e}solus auparavant. Notre sujet de recherche porte sur la cr\'{e}ation d'un syst\`{e}me permettant la correction d'erreur de fran\c{c}ais \`{a} l'aide du raisonnement \`{a} partir de cas. Plus pr\'{e}cis\'{e}ment, notre but \'{e}tait la cr\'{e}ation d'une base de cas gr\^{a}ce \`{a} laquelle nous pourrions corriger n'importe quelle erreur de fran\c{c}ais. De plus, au vu du nombre d'erreurs possibles en fran\c{c}ais, la cr\'{e}ation de cette base de cas \`{a} la main \'{e}tait donc impossible. Notre but \'{e}tait donc de cr\'{e}er une base de cas qui se remplie semi-automatiquement \`{a} l'aide d'outils ext\'{e}rieurs. L'outil en question fut WiCoPaCo, un recueil de d'erreurs et leurs corrections de fran\c{c}ais r\'{e}cup\'{e}r\'{e} depuis l'encyclop\'{e}die Wikip\'{e}dia. Cependant, parmi les 400 000 couples d'erreurs / corrections que contenaient le recueil, un grand nombre \'{e}taient inutilisables. Notre probl\'{e}matique \'{e}tait donc l'\'{e}puration de celui-ci. Pour r\'{e}aliser un tel objectif, la d\'{e}marche scientifique ainsi que l'entente de groupe \'{e}taient primordiale. A l'aide de travaux d\'{e}j\`{a} effectu\'{e}s sur l'\'{e}puration d'une base de cas ainsi que sur les diverses m\'{e}thodes de filtrage possible, nous avons con\c{c}u un logiciel, d\'{e}velopp\'{e} en Java ainsi qu'un protocole de cr\'{e}ation de filtre nous permettant d'enlever au fur et \`{a} mesure l'enti\`{e}ret\'{e} des cas inutile ou superflus. 
+\newline
+\newline
+A new reasoning system just be created a few years ago: the case-based reasoning. This kind of reasoning can solves any problem by finding a similar problem solved in his cases base, and adapting it for the initial problem. This system was not created earlier because Internet provides big data in free self-service very recently. So now, we can find some new ways to solve problems that had no solution in the past. Our search subject was linked to a creation of this kind of system which can correct a french mistake by using the case-based reasoning. More precisely, our subject was to create a case base that can be used to solves every french written mistake. Moreover, it was unthinkable to create manually a case base because of the uncountable number of mistakes that can be made. So, our goal was, with some tools, to generate this base case automatically (or almost). Here, the tool we used was WiCoPaCo, it is a website which store a file which contains a huge number of french written mistakes and their corrections. Even if the file contains about 400 000 couple of mistake/correction, not all of them was usable. That's why, we were in charge to filter this file. To reach that king of goal, an harsh scientific procedure and communication in the team was the key. Then, by using existing work and developing them, we create a Java software and invent a protocol to produce filter that can delete useless or shallow cases.
 
 \end{document}
-
